syntax = "proto3";

package presence;

import "google/protobuf/timestamp.proto";

option java_multiple_files = true;
option java_package = "com.botisgud.presence";

service PresenceService {
	rpc TrackEvent(EventRequest) returns (EventResponse) {}
}

message EventRequest {
	string user = 1;
	string status = 2;
	google.protobuf.Timestamp timestamp = 3;
}

message EventResponse {

}